package com.example.learn.design.pattern.han._05结构型模式._06享元模式.core;

public abstract class WebSite {

    public abstract void use(User user);//抽象方法
}
